svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: k8s-page
  name: k8s-page-svc
  namespace: k8s-club
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30080
  selector:
    app: k8s-page
  type: NodePort
status:
  loadBalancer: {}
